--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "dependencies": {
     "document-register-element": "1.13.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-is": "16.13.1",
+    "styled-components": "5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
@@ -62,9 +64,12 @@
     "@types/node": "~8.9.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
+    "@types/react-is": "16.7.1",
+    "@types/styled-components": "5.1.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.2.2",
+    "babel-plugin-styled-components": "1.10.7",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
