--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "postgit": "git push"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
+    "**/*.{ts,tsx}": [
       "yarn lint"
     ]
   },
