--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": [
-        
-      ]
+      "pre-commit": "lint-staged"
     }
   },
   "private": true,
