Started input field

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "document-register-element": "1.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-form-hook": "^0.0.1",
     "react-is": "16.13.1",
     "styled-components": "5.1.1"
   },
