Creating GraphQL starter kits

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,12 @@
     },
     "ui": {
       "tags": []
+    },
+    "movie-server": {
+      "tags": []
+    },
+    "movie-interfaces": {
+      "tags": []
     }
   }
 }
