--- a/package.json
+++ b/package.json
@@ -41,11 +41,19 @@
   },
   "private": true,
   "dependencies": {
+    "apollo-client": "^2.6.10",
+    "apollo-server-express": "^2.18.2",
+    "bcryptjs": "^2.4.3",
     "document-register-element": "1.13.1",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "pg": "^8.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-is": "16.13.1",
-    "styled-components": "5.1.1"
+    "styled-components": "5.1.1",
+    "type-graphql": "^1.1.0",
+    "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
@@ -55,12 +63,16 @@
     "@nrwl/cli": "10.3.0",
     "@nrwl/cypress": "10.3.0",
     "@nrwl/eslint-plugin-nx": "10.3.0",
+    "@nrwl/express": "^10.3.1",
     "@nrwl/jest": "10.3.0",
+    "@nrwl/node": "10.3.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "10.3.0",
     "@nrwl/web": "10.3.0",
     "@nrwl/workspace": "10.3.0",
     "@testing-library/react": "10.4.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.8",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
     "@types/react": "16.9.38",
