--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,7 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
+    "allowSyntheticDefaultImports": true,
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2017", "dom", "es2018.promise"],
     "skipLibCheck": true,
