--- a/package.json
+++ b/package.json
@@ -69,8 +69,11 @@
     "@nrwl/node": "10.3.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "10.3.0",
+    "@nrwl/storybook": "^11.2.12",
     "@nrwl/web": "10.3.0",
     "@nrwl/workspace": "10.3.0",
+    "@storybook/core": "^6.1.18",
+    "@storybook/react": "^6.1.18",
     "@testing-library/react": "10.4.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
